--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,8 @@
 [defaults]
 interpreter_python = /usr/bin/python
-#ansible_python_interpreter= /usr/bin/python2.7
-inventory = /Users/mkazmi/Documents/GitHub/Vmware/inventory
+#inventory = /Users/mkazmi/Documents/GitHub/Vmware/inventory
 #roles_path = /home/prod_ansible/github/Aws/invenotry/roles
-remote_user = root
+remote_user = iservermate
 timeout = 6000
 #[privilege_escalation]
 #become=True
