--- a/ping.yaml
+++ b/ping.yaml
@@ -1,6 +1,7 @@
-- name: Hello World Sample
-  hosts: all
+---
+
+- hosts: all
+  gather_facts: false
   tasks:
-    - name: Hello Message
-      debug:
-        msg: "Hello World!"
+    - ping:
+    - setup:
