Create VM using powercli

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 interpreter_python = /usr/bin/python
-#inventory = /Users/mkazmi/Documents/GitHub/Vmware/inventory
+inventory = /Users/mkazmi/Documents/GitHub/Esx/inventory
 #roles_path = /home/prod_ansible/github/Aws/invenotry/roles
 remote_user = iservermate
 timeout = 6000
