adding new file

--- a/roles/Esx/defaults/main.yml
+++ b/roles/Esx/defaults/main.yml
@@ -3,14 +3,18 @@
 vcenter_ip: 192.168.0.4
 vcenter_username: root
 vcenter_password: M0hsin!@#
-Eip: "{{ EsxServerIP }}"
-Spass: "{{ ServerPassword }}"
-vmName: "{{ VmName }}"
-DSName: "{{ DataStoreName }}"
-DSize: "{{ DiskSize }}"
-MSzie: "{{ MemorySize }}"
-NoCpus: "{{ NumberOfCpus }}"
-DFormat: "{{ DiskFormat }}"
-CCores: "{{ CpuCores }}"
-osType: "{{ OsType }}"
-ImagePath: "{{ IsoPath }}"
+# defaults file for Esx
+vcenter_ip: 192.168.0.4
+vcenter_username: root
+vcenter_password: M0hsin!@#
+Eip: 192.168.0.4
+Spass: M0hsin@123
+vmName: icmp-rtest-01
+DSName: Datastore1
+DSize: 50
+MSzie: 2
+NoCpus: 2
+DFormat: Thin
+CCores: 1
+osType: centos64Guest
+ImagePath: [datastore1] OS/centos8.iso
