--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 interpreter_python = /usr/bin/python
 inventory = /home/iservermate/Esx/inventory
-#roles_path = /home/prod_ansible/github/Aws/invenotry/roles
+roles_path = /home/iservermate/Esx/roles
 remote_user = iservermate
 timeout = 6000
 #[privilege_escalation]
