--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-ansible_python_interpreter = /usr/bin/python
+python_interpreter = /usr/bin/python
 inventory = /home/iservermate/Esx/inventory
 roles_path = /home/iservermate/Esx/roles
 remote_user = iservermate
